# centaur

./: .gitignore  Cargo.toml  README.md  config.toml
crates/centaur-cli/: Cargo.toml  config.toml
crates/centaur-cli/rules/: admin.conf  api.conf  api.toml  default.conf  web.conf  web.toml
crates/centaur-cli/src/: main.rs
crates/centaur-core/: Cargo.toml  test_rules.conf
crates/centaur-core/rules/: admin.conf  api.conf  default.conf  web.conf
crates/centaur-core/src/: lib.rs
crates/centaur-core/src/waf/: engine.rs  mod.rs  operator.rs  parser.rs  reloader.rs
crates/centaur-core/tests/: engine_test.rs
doc/: struct_project.md
rules/: example.conf
rules/web/crs/: REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf.example
src/: lib.rs  main.rs
src/cli/: cli.rs
src/config/: config.rs
src/logger/: logger.rs
src/proxy/: body_inspector.rs  mod.rs  proxy.rs  proxy_manager.rs  servers.rs
src/waf/: engine.rs  mod.rs  parser.rs  reloader.rs
src/web/: api.rs  ui.rs
